--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,6 +1,5 @@
 pytest==8.1.1
 httpx==0.27.0
-pytest-mock==3.14.0
-fastapi==0.110.0
-uvicorn[standard]==0.29.0
-pymysql==1.1.0
+fastapi==0.115.5
+uvicorn==0.30.6
+pymysql==1.1.1
